@@ -1,5 +1,5 @@
 {
-  "count": 17,
+  "count": 18,
   "uniques": 10,
   "clones": [
     {
@@ -19,6 +19,11 @@
     },
     {
       "timestamp": "2022-04-21T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-04-25T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
