@@ -1,3 +1,9 @@
+2022-04-26T00:39:39Z:
+* notice: last 14d: all unq: 18 10
+* notice: prev accum: outdated-all outdated-unq / all unq: 0 0 / 17 12
+* notice: next accum: outdated-all outdated-unq / all unq: 0 0 / 18 13
+* notice: prev json diff // prev day diff: unq all: +1 +1 / -0 -0 // +1 +1 / -0 -0
+
 2022-04-21T08:10:50Z:
 * notice: last 14d: all unq: 17 10
 * notice: prev accum: outdated-all outdated-unq / all unq: 0 0 / 16 11
